<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <!-- <include
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         layout="@layout/app_bar" />-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:weightSum="0"
            tools:ignore="DisableBaselineAlignment"
            android:id="@+id/linearLayout2">




            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.25"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/profile"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onCLickProfile"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_medium"
                    android:paddingRight="@dimen/padding_medium"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_menu_recent_history"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:paddingTop="@dimen/padding_bit"
                        android:text="@string/profile"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xxsmall"
                        android:visibility="gone"
                        tools:ignore="ObsoleteLayoutParam" />
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.25"
                android:gravity="center" >

                <LinearLayout
                    tools:ignore="UselessParent"
                    android:id="@+id/notes"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onCLickNotes"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_medium"
                    android:paddingRight="@dimen/padding_medium" >

                    <ImageView
                        tools:ignore="ContentDescription"
                        android:id="@+id/img_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_menu_gallery" />

                    <TextView
                        tools:ignore="ObsoleteLayoutParam"
                        android:id="@+id/tv_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:paddingTop="@dimen/padding_bit"
                        android:text="@string/notes"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xxsmall"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.25"
                android:gravity="center">


                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onCLickHome"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_medium"
                    android:paddingRight="@dimen/padding_medium"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/img_home"
                        android:layout_width="40dp"
                        android:layout_height="37dp"
                        android:src="@drawable/home"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:maxLines="1"
                        android:paddingTop="@dimen/padding_bit"
                        android:text="@string/home"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xxsmall"
                        android:visibility="gone"
                        tools:ignore="ObsoleteLayoutParam" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

       <com.example.hp.finalproject.MainActivity.NonSwipeableViewPager
           android:id="@+id/viewpager"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_alignParentTop="true"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_above="@+id/linearLayout2" >

       </com.example.hp.finalproject.MainActivity.NonSwipeableViewPager>


    </RelativeLayout>


</RelativeLayout>
